--- a/boot_artifactid/core/pom.xml
+++ b/boot_artifactid/core/pom.xml
@@ -119,5 +119,10 @@
 			<groupId>junit-addons</groupId>
 			<artifactId>junit-addons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
