--- a/boot_artifactid/it.tests/pom.xml
+++ b/boot_artifactid/it.tests/pom.xml
@@ -112,5 +112,18 @@
             <artifactId>aem-api</artifactId>
         	<scope>provided</scope>
         </dependency>
+        
+        <!-- Dependency for JUnit -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<!-- Dependency for Mockito -->
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<scope>test</scope>
+			</dependency>
     </dependencies>
 </project>
