--- a/boot_artifactid/pom.xml
+++ b/boot_artifactid/pom.xml
@@ -377,7 +377,20 @@
 				<version>1.4</version>
 				<scope>test</scope>
 			</dependency>
-			
+			<!-- Dependency for JUnit -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.10</version>
+				<scope>test</scope>
+			</dependency>
+			<!-- Dependency for Mockito -->
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.9.5</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
